syntax = "proto3";

package vectron.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "auth/auth.proto";

option go_package = "github.com/pavandhadge/vectron/shared/proto/apigateway";

// ===============================================
// Vectron Public API — The ONE users see
// ===============================================

service VectronService {
  // Create a new collection
  rpc CreateCollection(CreateCollectionRequest) returns (CreateCollectionResponse) {
    option (google.api.http) = {
      post: "/v1/collections"
      body: "*"
    };
  }

  // Delete a collection and all its data
  rpc DeleteCollection(DeleteCollectionRequest) returns (DeleteCollectionResponse) {
    option (google.api.http) = {delete: "/v1/collections/{name}"};
  }

  // Upsert vectors
  rpc Upsert(UpsertRequest) returns (UpsertResponse) {
    option (google.api.http) = {
      post: "/v1/collections/{collection}/points"
      body: "*"
    };
  }

  // Search vectors
  rpc Search(SearchRequest) returns (SearchResponse) {
    option (google.api.http) = {
      post: "/v1/collections/{collection}/points/search"
      body: "*"
    };
  }

  // Get point by ID
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {get: "/v1/collections/{collection}/points/{id}"};
  }

  // Delete point by ID
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {delete: "/v1/collections/{collection}/points/{id}"};
  }

  // List all collections
  rpc ListCollections(ListCollectionsRequest) returns (ListCollectionsResponse) {
    option (google.api.http) = {get: "/v1/collections"};
  }

  // Get collection status
  rpc GetCollectionStatus(GetCollectionStatusRequest) returns (GetCollectionStatusResponse) {
    option (google.api.http) = {get: "/v1/collections/{name}/status"};
  }

  // Update user profile
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse) {
    option (google.api.http) = {
      put: "/v1/user/profile"
      body: "*"
    };
  }

  // Submit search feedback
  rpc SubmitFeedback(SubmitFeedbackRequest) returns (SubmitFeedbackResponse) {
    option (google.api.http) = {
      post: "/v1/feedback"
      body: "*"
    };
  }
}

// ===============================================
// Messages
// ===============================================

message CreateCollectionRequest {
  string name = 1 [(google.api.field_behavior) = REQUIRED];
  int32 dimension = 2 [(google.api.field_behavior) = REQUIRED];
  string distance = 3; // "cosine", "euclidean", "dot"
}

message CreateCollectionResponse {
  bool success = 1;
}

message DeleteCollectionRequest {
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteCollectionResponse {
  bool success = 1;
}

message UpsertRequest {
  string collection = 1 [(google.api.field_behavior) = REQUIRED];
  repeated Point points = 2;
}

message UpsertResponse {
  int32 upserted = 1;
}

message SearchRequest {
  string collection = 1 [(google.api.field_behavior) = REQUIRED];
  repeated float vector = 2 [(google.api.field_behavior) = REQUIRED];

  // proto3 has no native defaults — this sets an OpenAPI (Swagger) default
  // so the generated OpenAPI spec will show top_k default = 10.
  uint32 top_k = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {default: "10"}];
  
  // Optional natural language query for reranking purposes.
  string query = 4;

  // Optional per-request timeout budget for search fan-out (milliseconds).
  // If set, slow worker responses may be skipped and partial results returned.
  uint32 timeout_ms = 5;
}

message SearchResponse {
  repeated SearchResult results = 1;
}

message SearchResult {
  string id = 1;
  float score = 2;
  map<string, string> payload = 3;
}

message GetRequest {
  string collection = 1;
  string id = 2;
}

message GetResponse {
  Point point = 1;
}

message DeleteRequest {
  string collection = 1;
  string id = 2;
}

message DeleteResponse {}

message ListCollectionsRequest {}

message ListCollectionsResponse {
  repeated string collections = 1;
}

message GetCollectionStatusRequest {
  string name = 1;
}

message GetCollectionStatusResponse {
  string name = 1;
  int32 dimension = 2;
  string distance = 3;
  repeated ShardStatus shards = 4;
}

message ShardStatus {
  uint32 shard_id = 1;
  repeated uint64 replicas = 2;
  uint64 leader_id = 3;
  bool ready = 4;
}

message Point {
  string id = 1;
  repeated float vector = 2;
  map<string, string> payload = 3;
}

message UpdateUserProfileRequest {
  vectron.auth.v1.Plan plan = 1;
}

message UpdateUserProfileResponse {
  vectron.auth.v1.UserProfile user = 1;
}

// ===============================================
// Feedback Messages
// ===============================================

message SubmitFeedbackRequest {
  string collection = 1 [(google.api.field_behavior) = REQUIRED];
  string query = 2; // Original search query (optional)
  repeated string result_ids = 3 [(google.api.field_behavior) = REQUIRED]; // IDs of search results
  repeated FeedbackItem feedback_items = 4 [(google.api.field_behavior) = REQUIRED]; // Feedback for each result
  map<string, string> context = 5; // Additional context (user_id, session_id, etc.)
}

message FeedbackItem {
  string result_id = 1 [(google.api.field_behavior) = REQUIRED]; // ID of the result being rated
  int32 relevance_score = 2; // 1-5 scale (1=not relevant, 5=highly relevant)
  bool clicked = 3; // Whether user clicked on this result
  int32 position = 4; // Position in the returned results (0-based)
  string comment = 5; // Optional user comment
}

message SubmitFeedbackResponse {
  bool success = 1;
  string feedback_id = 2; // Unique identifier for this feedback session
}
