syntax = "proto3";

package vectron.auth.v1;

import "google/api/annotations.proto";

option go_package = "github.com/pavandhadge/vectron/shared/proto/auth";

// ================== Enums ==================

enum Plan {
  PLAN_UNSPECIFIED = 0;
  FREE = 1;
  PAID = 2;
}

enum SubscriptionStatus {
  SUBSCRIPTION_STATUS_UNSPECIFIED = 0;
  ACTIVE = 1;
  CANCELED = 2;
  PAST_DUE = 3;
}

// ================== Service Definition ==================

// AuthService provides user account and API key management.
service AuthService {
  // --- User Account Management ---

  // Register a new user.
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
    option (google.api.http) = {
      post: "/v1/users/register"
      body: "*"
    };
  }

  // Login a user and get a session JWT.
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  }

  // Get the current user's profile (requires JWT authentication).
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse) {
    option (google.api.http) = {get: "/v1/user/profile"};
  }

  // Update the current user's profile (requires JWT authentication).
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse) {
    option (google.api.http) = {
      put: "/v1/user/profile"
      body: "*"
    };
  }

  // Delete the current user's account (requires JWT authentication and optional password confirmation).
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      post: "/v1/user/delete"
      body: "*"
    };
  }

  // Refresh the current user's JWT token (requires valid JWT).
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/refresh"
      body: "*"
    };
  }

  // --- API Key Management (requires JWT authentication) ---

  // Create a new API key for the authenticated user.
  rpc CreateAPIKey(CreateAPIKeyRequest) returns (CreateAPIKeyResponse) {
    option (google.api.http) = {
      post: "/v1/keys"
      body: "*"
    };
  }

  // List all API keys for the authenticated user.
  rpc ListAPIKeys(ListAPIKeysRequest) returns (ListAPIKeysResponse) {
    option (google.api.http) = {get: "/v1/keys"};
  }

  // Delete an API key belonging to the authenticated user.
  rpc DeleteAPIKey(DeleteAPIKeyRequest) returns (DeleteAPIKeyResponse) {
    option (google.api.http) = {delete: "/v1/keys/{key_prefix}"};
  }

  // --- For Internal Services (e.g., API Gateway) ---

  // Validate a raw API key.
  rpc ValidateAPIKey(ValidateAPIKeyRequest) returns (ValidateAPIKeyResponse) {
    option (google.api.http) = {
      post: "/v1/keys/validate"
      body: "*"
    };
  }

  // Create an SDK JWT for an existing API key.
  rpc CreateSDKJWT(CreateSDKJWTRequest) returns (CreateSDKJWTResponse) {
    option (google.api.http) = {
      post: "/v1/sdk-jwt"
      body: "*"
    };
  }

  // Get user and plan details for a given API Key ID.
  rpc GetAuthDetailsForSDK(GetAuthDetailsForSDKRequest) returns (GetAuthDetailsForSDKResponse) {}
}

// ================== Messages ==================

message UserProfile {
  string id = 1;
  string email = 2;
  int64 created_at = 3;
  Plan plan = 4;
  SubscriptionStatus subscription_status = 5;
}

message APIKey {
  string key_prefix = 1;
  string user_id = 2;
  int64 created_at = 3;
  string name = 4;
}

// --- User Registration ---
message RegisterUserRequest {
  string email = 1;
  string password = 2;
}

message RegisterUserResponse {
  UserProfile user = 1;
}

// --- User Login ---
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string jwt_token = 1 [json_name = "jwtToken"];
  UserProfile user = 2;
}

// --- User Profile ---
message GetUserProfileRequest {} // User ID is extracted from JWT

message GetUserProfileResponse {
  UserProfile user = 1;
}

message UpdateUserProfileRequest {
  Plan plan = 1;
}

message UpdateUserProfileResponse {
  UserProfile user = 1;
  string jwt_token = 2 [json_name = "jwtToken"];
}

// --- API Key Management ---
message CreateAPIKeyRequest {
  // User ID is extracted from JWT
  string name = 1;
}

message CreateAPIKeyResponse {
  string full_key = 1; // The full key is only returned on creation
  APIKey key_info = 2;
}

message ListAPIKeysRequest {} // User ID is extracted from JWT

message ListAPIKeysResponse {
  repeated APIKey keys = 1;
}

message DeleteAPIKeyRequest {
  // User ID is extracted from JWT
  string key_prefix = 1;
}

message DeleteAPIKeyResponse {
  bool success = 1;
}

// --- Internal Validation ---
message ValidateAPIKeyRequest {
  string full_key = 1;
}

message ValidateAPIKeyResponse {
  bool valid = 1;
  string user_id = 2;
  string plan = 3;
  string api_key_id = 4;
}

message CreateSDKJWTRequest {
  string api_key_id = 1; // The KeyPrefix of the API key to wrap
}

message CreateSDKJWTResponse {
  string sdk_jwt = 1; // The JWT containing the API key
}

message GetAuthDetailsForSDKRequest {
  string api_key_id = 1;
}

message GetAuthDetailsForSDKResponse {
  string user_id = 1;
  Plan plan = 2;
  bool success = 3;
}

// --- User Account Deletion ---
message DeleteUserRequest {
  // Optional: Password confirmation for extra security
  string password = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

// --- Token Refresh ---
message RefreshTokenRequest {} // User ID extracted from current JWT

message RefreshTokenResponse {
  string jwt_token = 1 [json_name = "jwtToken"];
  int64 expires_at = 2 [json_name = "expiresAt"];
}
